# scout

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: app.rs  config.rs  entry.rs  icon.rs  launcher.rs  main.rs  search.rs  ui.rs
