[package]
name = "scout"
version = "0.1.0"
edition = "2024"

[dependencies]
fuzzy-matcher = "0.3.7"
gio = "0.18"
glib = "0.18"
gtk = {version = "0.18.2", features = ["v3_24"]}
gdk = "0.18.2"
libc = "0.2.174"
system_shutdown = "4.0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
meval = "0.2.0"