[package]
name = "scout"
version = "0.1.0"
edition = "2024"
description = "A powerful application launcher with fuzzy search capabilities."
license = "MIT"
repository = "https://github.com/daniel-curry/scout"
readme = "README.md"

[dependencies]
fuzzy-matcher = "0.3.7"
gio = "0.18"
glib = "0.18"
gtk = {version = "0.18.2", features = ["v3_24"]}
gdk = "0.18.2"
libc = "0.2.174"
system_shutdown = "4.0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
meval = "0.2.0"